<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_tiny"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivProfile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:src="@drawable/my_profile_ph"
            app:civ_border_color="@color/charcoal_grey"
            app:civ_border_width="1dp"/>


        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etName"
            style="@style/EtTheme"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/spacing_normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etCountryCode"
                style="@style/EtTheme"
                android:layout_weight="3"
                android:editable="false"
                android:text="+91"
                android:textSize="@dimen/font_xlarge"
                android:textColor="@color/black"
                android:inputType="number"
                 android:paddingEnd="0dp"/>

            <View
                android:layout_width="1dp"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:layout_height="@dimen/spacing_xlarge"
                android:background="@color/black"/>

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/etPhoneNo"
                style="@style/EtTheme"
                android:hint="@string/contact_number"
                android:inputType="number"
                android:paddingStart="0dp"/>
        </LinearLayout>
        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etEmailAddr"
            style="@style/EtTheme"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_tiny"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="@dimen/spacing_normal"
                />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:text="male"/>

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="female"/>
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@color/black"/>
        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etDOB"
            style="@style/EtTheme"

            android:hint="@string/dob"/>




        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etPassword"
            style="@style/EtTheme"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <com.skeleton.util.customview.MaterialEditText
            android:id="@+id/etConfirmPassword"
            style="@style/EtTheme"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>


        <CheckBox
            android:id="@+id/cbTOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tac"/>


        <Button
            style="@style/TvTheme"
            android:background="@drawable/button_login"
            android:text="@string/sign_in"
            android:textSize="@dimen/font_xlarge"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/spacing_normal"
            android:id="@+id/btn_signUp"
            />

        <Button
            style="@style/TvTheme"
            android:background="@drawable/button_login_fb"
            android:text="@string/sign_in_with_facebook"
            android:textSize="@dimen/font_xlarge"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_xlarge"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>